fix(core): Fixing myCompany icon layout on smaller screens
The gear icon in the cs-header was not centered on smaller screens, where the org name was hidden.

--- a/app/modules/core/myCompany/_myCompany.scss
+++ b/app/modules/core/myCompany/_myCompany.scss
@@ -18,9 +18,12 @@
 }
 
 .btn--myCompany {
+  .header-label {
+    margin-right: 0.75rem !important;
+  }
+
   .icon {
     position: static !important;
-    margin-left: 0.75rem !important;
   }
 }
 
